--- a/PS/1.md
+++ b/PS/1.md
@@ -1,3 +1,3 @@
 # Probabilités et Simulations
 
-Etherpad : http://pads.univ-grenoble-alpes.fr/p/INFO4_PS_19
+Etherpad : <http://pads.univ-grenoble-alpes.fr/p/INFO4_PS_19>
