--- a/PS/1.md
+++ b/PS/1.md
@@ -1,3 +1,69 @@
 # Probabilités et Simulations
 
 Etherpad : <http://pads.univ-grenoble-alpes.fr/p/INFO4_PS_19>
+
+$$
+(\Omega, \mathcal{A}, \mathbb{P})
+$$
+
+## Rappels
+
+- Univers des évènements : $$\Omega = \{\omega_1, \omega_2, \omega_3, \dots\}$$
+- Évènement $$A \in \Omega$$
+- $$\mathcal{A}$$ : tous les $$A$$ considérés
+- $$\mathbb{P} = \begin{array}{l}
+    \mathcal{A} & \rightarrow & [0, 1]]\\
+    A & \mapsto & \mathbb{P}[A]
+\end{array}$$
+- $$\mathbb{P}(\Omega) = 1$$
+- $$\mathbb{P}(\empty) = 0$$
+- $$\mathbb{P}(A \cup B) = \mathbb{P}(A) + \mathbb{P}(B) - \mathbb{P}(A \cap B)$$
+- 2 dés 6 : $$\Omega = \{(1, 1), (1, 2), (1, 3), (2, 1), (2, 2), \dots, (6, 6)\}$$
+  - Probabilité qu'on ait un double : $$\forall v \in \Omega : \mathbb{P}(v) = {1 \over |\Omega|} = {1 \over 36}$$
+
+## Zombie Dice
+
+|   3R    |  4Y   |  6G   |
+| :-----: | :---: | :---: |
+| 3 bang  |   2   |   1   |
+| 2 brain |   2   |   3   |
+| 1 walk  |   2   |   2   |
+
+- $$A = \{R, Y, G\}$$
+- $$\Omega = A^3$$
+
+> `sample(x = c("Bang", "Brain", "Walk"), size = 1, prob = c(3, 2, 1), replace = T)`
+>
+> `sample(x = c(rep("R", 3), rep("Y", 4), rep("G", 6)), size = 3, replace = F)`
+
+## Espace continu
+
+Pour n'importe quel point de $$\Omega = [0, 1]$$ sa probabilité est nulle (si on sommait la probabilité de chacun des éléments, dont il y a une infinité, on aurait un souci).
+
+**Dénombrable** / indénombrable = qu'on peut / ne peut pas compter
+
+- $$\mathbb{P}([a, b]) = |b - a|$$
+- $$\mathbb{P}(\{a\}) = 0$$
+- $$\mathbb{P}(\mathbb{Q}) = ?$$
+
+## Variable aléatoire $$X$$
+
+$$X: \Omega \rightarrow \mathbb{R}|\mathbb{N}$$
+
+$$
+\forall x \in \mathbb{R} (\text{ou } \mathbb{N}) : \{\omega / X(\omega) \leq x \} \in \mathcal{A}
+$$
+
+$$
+F_X : \begin{array}{l}
+    \mathbb{F} & \rightarrow & [0, 1]\\
+    x & \rightarrow & \mathbb{P}(X(\omega) \leq x)  
+\end{array}
+$$
+
+(fonction de répartition : cumulative distribution function / CDF )
+
+- $$f_X : \mathbb{R} \rightarrow \mathbb{R}$$
+- $$f_X = F_X'$$
+- $$F_X(x) = \int\limits_{-\infty}^{x} f_X(u)du$$
+- $$f_X \simeq \mathbb{P}$$
