Cours jeudi 19/09/2019 et lundi 23/09/2019 matin

--- a/II/1.md
+++ b/II/1.md
@@ -1,6 +1,10 @@
 # Ingénierie Intéraction Homme Machine (IHM)
 
+## 0. Présentation du cours
+
 Responsable : Renaud BLANCH (<blanch@imag.fr>)
+
+Site : <http://iihm.imag.fr/blanch/INFO4/IHM/>
 
 Langage : Java FX
 
@@ -9,3 +13,25 @@ Langage : Java FX
 Intéraction : monde physique $$\leftrightarrow$$ monde numérique
 
 Distance sémantique / articulatoire
+
+3 parties : introduction, technique (interface), pratique (JavaFX)
+
+## 1. L’interaction
+
+**Interface.** Séparation entre deux éléments, ce que ces deux éléments ont besoin de connaître.
+
+**Intéraction.** Action/Influence réciproque entre plusieurs objets.
+
+**IIHM.** Étude : conception, mise en œuvre, évaluation. Pluridisciplinaire : ingénierie, facteurs humains, design. À fort enjeu.
+
+**Ergonomie.** Étude scientifique de la relation entre l'Homme et ses moyens, méthodes et milieux de travail.
+
+### Styles d'interaction
+
+**Types** : la ligne de commande (read,eval,print,loop : REPL), les menus, les formulaires, la manipulation directe...
+
+**Interfaces WIMP.** Windows, Icon, Menu, Pointer.
+
+## 2. L’Homme
+
+## 3. La machine
