--- a/LT/TD/1.md
+++ b/LT/TD/1.md
@@ -1,5 +1,9 @@
 # Langages et Traducteurs
 
+## Exercice 1
+
+### Nombres naturels
+
 $$
 ExpN := n (\mathbb{N})\; |\; ExpN \oplus ExpN\; |\; ExpN \ominus ExpN\; |\; ExpN \otimes ExpN\; |\; \empty
 $$
@@ -9,7 +13,7 @@ $$
    - $$eval(n) = n$$
    - $$eval(e1 \oplus e2) = eval(e1) + eval(e2)$$
 
-    ![Arbre](1-exo1.jpg)
+    ![Arbre](img/1-exo1.jpg)
 
    - $$eval(e1 \ominus e2) = \text{ si } (e2 > e1) \text{ alors } 0 \text{ sinon } e1 - e2$$
    - $$eval(e1 \otimes e2) = e1 \times e2$$
@@ -17,7 +21,7 @@ $$
 
 2. Dessiner l'arbre pour $$((2 \oplus 3) \otimes (4 \oslash 2)) \ominus 1$$
 
-    ![Arbre](1-exo2.jpg)
+    ![Arbre](img/1-exo2.jpg)
 
 3. L'évaluer :
 
@@ -46,3 +50,32 @@ $$
         - **Cas a.** $$0$$ est pair donc c'est pair
         - **Cas b.** $$e1$$ et $$e2$$ sont pairs et la soustraction de deux nombres pairs est paire donc c'est pair
       - **Cas 4.** $$ExpN$$ est $$e1 \otimes e2$$ : $$eval(e1 \otimes e2) = eval(e1) \times eval(e2) = e1 \times e2$$ or $$e1$$ et $$e2$$ sont pairs et il suffit que l'un des deux membres d'une multiplication soit pair pour que le résultat soit pair donc c'est pair
+
+### Booléens
+
+1. Définir ExpB := vrai | faux | ? avec 2 cas pour conjonction et disjonction, 1 cas pour comparer 2 ExpB.
+
+  $$
+  \left\{\begin{array}{lcll}
+  ExpB & := & \text{vrai} | \text{faux} & | ExpB \land ExpB \\
+  & & & | ExpB \lor ExpB \\
+  & & & | ExpB == ExpB \\
+  \end{array}\right.
+  $$
+
+2. Étendre ExpN pour avoir "si... alors... sinon...".
+
+  $$
+  ExpN := \dots | \text{ si } ExpB \text{ alors } ExpN \text{ sinon } ExpN
+  $$
+
+3. Étendre l'évaluation (evalB).
+
+- $$evalB(b) = b$$
+- $$eval(b1 \land b2) = eval(b1) \& eval(b2)$$
+- $$eval(b1 \lor b2) = eval(b1) | eval(b2)$$
+- $$eval(b1 ==  b2) = eval(b1) == eval(b2)$$
+
+4. Compléter Exercice 1 - question 4.
+
+?
