--- a/TR/1.md
+++ b/TR/1.md
@@ -101,3 +101,104 @@ Destination     | Gateway
 @IP_RéseauL2/24 | @Eth1
 ****            | @IP_R1
 ```
+
+### UDP & TCP
+
+#### Notion de **port**
+
+**NIC.** _Network Interface Card_
+
+Adresse IP (\@IP) $$\rightarrow$$ désigne une machine / un équipement / une NIC $$\rightarrow$$ comment déterminer l'application avec qui communiquer sur un équipement ? $$\rightarrow$$ numéro de port
+
+> Les ports 0-1023 sont réservés (1024 - 65535 libres). On peut tous les retrouver dans `/etc/services` :
+>
+>   nom    | port | protocole
+> :-------:|:----:|:--------:
+>   http   |  80  |    TCP
+>  https   | 443  |    TCP
+>   ftp    |  21  |    TCP
+> ftp-data |  20  |    TCP
+>   tftp   |  69  |    UDP
+>   ssh    |  22  |    TCP
+
+Une "association" entre 2 applications peut être définie de manière _unique_ par le quadruplet \@IP\_SRC, \@IP\_DST, Port\_SRC, Port\_DST (+ "type" de protocole).
+
+#### UDP (_User Datagram Protocol_)
+
+**Définition.** Communication avec un minimum de fonctionnalités : pas de contrôle d'arrivée ni de contrôle de séquencement, etc. $$\simeq$$ "IP + numéro de port"
+
+En-tête :
+
+```
+0     15 | 16     31
+--------------------
+Port SRC | Port DST
+Longueur | Checksum
+      Données
+```
+
+#### TCP (_Transmission Control Protocol_)
+
+**Définition.** Transfert fiable sur connection avec :
+
+- Contrôle des données transférées (endommagées, perdues, dupliquées)
+- Contrôle de flux $\rightarrow$ mécanisme à fenêtre pour éviter de saturer un récepteur manquant d'espace (buffer)
+
+_Related._ Tube bidirectionnel de flot d'octets et approche de bout en bout (_end-to-end_).
+
+
+```
+0                               31
+----------------------------------
+     Port SRC     |    Port DST
+        Numéro de séquence
+       Numéro d'acquittement
+Depl | // | Flags |      Fenêtre
+     Checksum     | Pointeur Urgent
+               Options
+       ...        | ///////////////
+               Données
+                 ...
+```
+
+- **Numéro de séquence.** Indique le numéro du 1er octet présent dans le champ des données.
+- **Numéro d'acquittement.** Contient le numéro de séquence du prochain octet attendu (par l'émetteut de ce message) et acquitte tous les précédents octets.
+- **Déplacements.** 4 bits en mots de 32 bits, représente la taille de l'entête.
+- **FLAGS.** (6 bits)
+  - **URG.** Message urgent présent $$\rightarrow$$ utiliser le pointeur msg urg.
+  - **ACK.** Champ d'acquittement, peut être pris en compte.
+  - **PSH.** (_push_) Les données reçues doivent être immédiatement remontées aux couches supérieures.
+  - **RST.** (_reset_) Fermeture de connexion à une erreur irrécupérable.
+  - **SYN.** (_synchronize_) Ouverture de connexion (CNX).
+  - **FIN.** (_finalize_) Fermeture de connexion (CNX).
+  - **Fenêtre.** Nombre d'octets que l'émetteur du message peut encore recevoir (place dans le buffer de réception) = **contrôle de flux**
+  - **Options.** (MSS = _Maximum Segment Size_) $$\rightarrow$$ souvent trame max Ethernet
+
+#### Ouverture de connexion
+
+Rôle dissymetrique des 2 entités communicantes :
+
+- **Client** : celui qui demande l'ouverture de connection
+- **Serveur** : celui qui l'accepte ou non
+
+Le serveur autorise l'ouverture **passive** de connexion ("vue OS") et le client demande une ouverture **active** de connexion.
+
+![Chronogramme ouverture de connexion](img/1_ouverture.jpg)
+
+> Une ouverture de connexion "consomme" 1 ACK
+
+#### Fin de connexion
+
+Effectuée par n'importe quelle extrémité, elle se compose de 2 demandes de fermeture.
+
+![Chronogramme fin de connexion](img/2_fin.jpg)
+
+#### Transfert de données
+
+![Chronogramme transfert de données](img/3_transfert.jpg)
+
+#### Gestion des erreurs
+
+Les erreurs sont détectées par l'absence d'acquittement positif à l'expiration d'un temporisateur (timer) : "toutes" les données reçues hors séquence sont mémorisées.
+
+.
