--- a/PS/1.md
+++ b/PS/1.md
@@ -67,3 +67,99 @@ $$
 - $$f_X = F_X'$$
 - $$F_X(x) = \int\limits_{-\infty}^{x} f_X(u)du$$
 - $$f_X \simeq \mathbb{P}$$
+
+Espérance (*expected value*) :
+
+- Discret : $$\mathbb{E}(X) = \sum\limits_{i = 1}^{n} x_i \mathbb{P}(X=x_i)$$
+- Continu (observé) : $$\mathbb{E}(X) = \int\limits_{-\infty}^{+\infty} xf_X(x)dx$$
+- Continu (toutes les possibilités) : $$\mathbb{E}(X) = \int\limits_{-\omega} X(\omega)d\mathbb{P}(\omega)$$
+
+> On peut noter $$\mathbb{P}(X=x_i)$$ en $$p_i$$
+
+*Exemple.* Prenons un dé 6.
+
+- $$"\Omega" = \{\cdot, \cdot\cdot, \dots, \cdots\cdots\}$$
+- $$X(\Omega) = \{1, 2, 3, 4, 5, 6\}$$
+- $$\mathbb{P}(X=k) = \left\{\begin{array}{lcl}
+    1/6 \text{ si } k \in \{1, 2, \dots, 6\}\\
+    0 \text{ sinon}
+    \end{array}\right.$$
+- $$\begin{array}{lcl}
+  \mathbb{E}(X) & = & {1 \over 6} \times 1 + {1 \over 6} \times 2 + \cdots + {1 \over 6} \times 6\\
+  & = & {1 \over 6} \times (1 + 2 + \cdots + 6)\\
+  & = & {21 \over 6} = {7 \over 2}\\
+  \end{array}$$
+
+*Exemple.* Prenons deux dés 6.
+
+- $$"\Omega" = \{(a, b) | a \in \{1, \dots, 6\} \text{ et } b \in \{1, \dots, 6\}\}$$
+- $$X(\Omega) = \{2, 3, \dots, 12\}$$
+- $$\mathbb{P}(X=k) = \{{1 \over 36}, {2 \over 36}, {3 \over 36}, \dots, {6 \over 36}, {5 \over 36}, \dots, {1 \over 36}\}$$
+- $$\sum = {1 \over 36}(1+2+3+4+5+6+5+4+3+2+1) = {1 \over 36}(15 + 6 + 15) = 1$$
+- $$\begin{array}{lcl}
+  \mathbb{E}(X) & = & {1 \over 36} \times (1 \times 2 + 2 \times 3 + \dots + 5 \times 6 + 6 \times 7 + 8 \times 5 + \dots + 12 \times 1)\\
+  \end{array}$$
+
+
+*Exemple.* Pile ou Face
+
+- $$"\Omega" = \{\text{Pile}, \text{Face}\}$$
+- $$X(\Omega) = \{0, 1\}$$
+- $$\mathbb{P}(X=k) = {1 \over 2}$$
+- $$\mathbb{E}(X) = {1 \over 2} \times 0 + {1 \over 2} \times 1 = {1 \over 2}$$
+
+*Exemple.* Loterie, 2D6, double 6 $$\rightarrow$$ 1M€, sinon -10K€
+
+- $$\begin{array}{lcl}
+  \mathbb{E}(X) & = & {1 \over 36} \times 10^6 - {35 \over 36} \times 10^4\\
+  & \approx & 18000€
+  \end{array}$$
+
+
+$$\text{Unif}(0, 1)$$
+
+- $$X(\Omega) = [0, 1]$$
+- $$f_X(x) =  \left\{\begin{array}{lcl}
+    1 \text{ si } x \in [0, 1]\\
+    0 \text{ sinon}
+    \end{array}\right.$$
+- $$f_X(x) : \mathbb{R} \rightarrow \mathbb{R}^+$$
+- $$\begin{array}{lcl}
+    \mathbb{E}(X) & = & \int_{- \infty}^{+ \infty} x \times f_X(x)dx \text{ (}f_X(x) = 0\text{ ou }1\text{)}\\
+    & = & \int_0^1 xdx\\
+    & = & [{x^2 \over 2}]^1_0\\
+    & = & {1 \over 2}
+    \end{array}$$
+
+$$\text{Unif}(0, 1)^2$$
+
+- $$X^2(\Omega) = [0, 1]$$
+- $$\begin{array}{lcl}
+    \mathbb{E}(X^2) & = & \int_0^1 uf_{X^2}(u)du\\
+    & = & \int_0^1 x^2f_X(x)dx \text{ (}f_X(x) = 1\text{ entre } 0 \text{ et } 1\text{)}\\
+    & = & [{x^3 \over 3}]^1_0\\
+    & = & {1 \over 3}
+    \end{array}$$
+
+
+$$X \sim E(\lambda)$$
+
+- $$f_X(x) = \left\{\begin{array}{lcl}
+    \lambda \times e^{- \lambda x} \text{ si } x \geq 0\\
+    0 \text{ sinon}
+    \end{array}\right.$$
+- On vérifie que la formule soit correcte : $$\begin{array}{lcl}
+    \mathbb{P}(\Omega) & = & \int_0^{\infty} \lambda e^{\lambda x} dx\\
+    & = & [{-e^{\lambda x} \lambda \over \lambda}]_0^{\infty}\\
+    & = & 0 - {-1 \lambda \over \lambda}\\
+    & = & 1\\
+    \end{array}$$
+
+Pour la prochaine fois :
+
+- Calculer E(x) pour la prochaine fois
+- Pareil pour Cauchy : $$f_X(x) = {1 \over 1 + x^2} si x \geq 0, 0 sinon$$
+- Tester avec R
+
+
+.
