--- a/RO/1.md
+++ b/RO/1.md
@@ -58,7 +58,23 @@ subject to {
 }
 ```
 
+Passage entre les formes :
 
-59 KG
+- équation vers inéquation : $$ax=b \Leftrightarrow \left\{\begin{array}{lcl}ax & \le & b\\ax & \ge & b\end{array}\right.$$
+- inéquation vers ́equation : ajouter une variable d'écart $$s$$ (pour *slack*)
+- min et max : $$\max f(x) =−\min−f(x)$$
+
+Forme canonique :
+
+- maximisation
+- toutes les variables sont non négatives
+- toutes les contraintes sont des inéquations du type “$$\le$$”
+
+Forme standard :
+
+- maximisation
+- toutes les variables sont non négatives
+- toutes les contraintes sont des équations du type "$$=$$"
+
 
 .
