--- a/PF/1.md
+++ b/PF/1.md
@@ -10,6 +10,8 @@ Responsables TD/TP : Benjamin Wack / Erwan Jahier
 
 Langage : OCaml (Rust)
 
+Cours 1 : <http://www-verimag.imag.fr/~monin/EnseignementPublic/InformatiquePolytech/PF/Cours/Cours01.pdf>
+
 ## 1. Introduction à OCaml
 
 Programmation avec des fonctions
