Cours lundi 30/09/2019 matin

--- a/CC/CM/1.md
+++ b/CC/CM/1.md
@@ -1,8 +1,10 @@
-# Complexité algorithmique
+# Complexité algorithmique - 1
 
 Responsable : <Valentin.R...@imag.fr>?
 
 Auteure diapo : <Nadia.Brauner@imag.fr>
+
+Site intéressant : <https://pagesperso.g-scop.grenoble-inp.fr/~stehlikm/>
 
 > *Partiel avant les vacances de la Toussaint*
 
