--- a/PS/CM/1.md
+++ b/PS/CM/1.md
@@ -57,7 +57,7 @@ $$
 $$
 F_X : \begin{array}{l}
     \mathbb{F} & \rightarrow & [0, 1]\\
-    x & \rightarrow & \mathbb{P}(X(\omega) \leq x)  
+    x & \rightarrow & \mathbb{P}(X(\omega) \leq x)
 \end{array}
 $$
 
@@ -148,7 +148,9 @@ $$X \sim E(\lambda)$$
     \lambda \times e^{- \lambda x} \text{ si } x \geq 0\\
     0 \text{ sinon}
     \end{array}\right.$$
-- On vérifie que la formule soit correcte : $$\begin{array}{lcl}
+- On vérifie que la formule soit correcte :
+
+    $$\begin{array}{lcl}
     \mathbb{P}(\Omega) & = & \int_0^{\infty} \lambda e^{\lambda x} dx\\
     & = & [{-e^{\lambda x} \lambda \over \lambda}]_0^{\infty}\\
     & = & 0 - {-1 \lambda \over \lambda}\\
@@ -157,7 +159,7 @@ $$X \sim E(\lambda)$$
 
 Pour la prochaine fois :
 
-- Calculer E(x) pour la prochaine fois
+- Calculer E(x)
 - Pareil pour Cauchy : $$f_X(x) = {1 \over 1 + x^2} si x \geq 0, 0 sinon$$
 - Tester avec R
 
