--- a/TR/CM/1.md
+++ b/TR/CM/1.md
@@ -129,7 +129,7 @@ Une "association" entre 2 applications peut être définie de manière _unique_ 
 
 En-tête :
 
-```
+```text
 0     15 | 16     31
 --------------------
 Port SRC | Port DST
@@ -146,8 +146,9 @@ Longueur | Checksum
 
 _Related._ Tube bidirectionnel de flot d'octets et approche de bout en bout (_end-to-end_).
 
+En-tête :
 
-```
+```text
 0                               31
 ----------------------------------
      Port SRC     |    Port DST
@@ -162,7 +163,7 @@ Depl | // | Flags |      Fenêtre
 ```
 
 - **Numéro de séquence.** Indique le numéro du 1er octet présent dans le champ des données.
-- **Numéro d'acquittement.** Contient le numéro de séquence du prochain octet attendu (par l'émetteut de ce message) et acquitte tous les précédents octets.
+- **Numéro d'acquittement.** Contient le numéro de séquence du prochain octet attendu (par l'émetteur de ce message) et acquitte tous les précédents octets.
 - **Déplacements.** 4 bits en mots de 32 bits, représente la taille de l'entête.
 - **FLAGS.** (6 bits)
   - **URG.** Message urgent présent $$\rightarrow$$ utiliser le pointeur msg urg.
@@ -191,14 +192,88 @@ Le serveur autorise l'ouverture **passive** de connexion ("vue OS") et le client
 
 Effectuée par n'importe quelle extrémité, elle se compose de 2 demandes de fermeture.
 
-![Chronogramme fin de connexion](img/2_fin.jpg)
+![Chronogramme fin de connexion](img/1_fin.jpg)
 
 #### Transfert de données
 
-![Chronogramme transfert de données](img/3_transfert.jpg)
+![Chronogramme transfert de données](img/1_transfert.jpg)
 
 #### Gestion des erreurs
 
 Les erreurs sont détectées par l'absence d'acquittement positif à l'expiration d'un temporisateur (timer) : "toutes" les données reçues hors séquence sont mémorisées.
+
+<!-- TODO ![Chronogramme erreur](img/1_erreur.jpg) -->
+
+#### Adaptation à l'environnement
+
+TCP a été conçu pour s'adapter aux :
+
+- **réseaux locaux** (LAN) : latence faible / débit élevé
+- **réseaux longues distances** (WAN) : latence élevée / débit variable
+
+#### Gestion des temporisateurs
+
+Leur valeur impacte les performances (latence, débit, usage du réseau).
+
+- **Si timer trop petit.** On ré-envoie inutilement à chaque fois des paquets reçus mais pas encore acquittés car le timer est trop court.
+
+  <!-- TODO ![Chronogramme erreur](img/1_timer-trop-petit.jpg) -->
+
+- **Si timer trop grand.** On sous-utilise le réseau, le temps de réponse est mauvais..
+
+  <!-- TODO ![Chronogramme erreur](img/1_timer-trop-grand.jpg) -->
+
+La durée optimale d'un timer est égal au RTT (*Round Trip Time* / Temps d'Aller-Retour)
+
+**Algorithme de Karn.** Un estimateur du RTT :
+
+$$
+RTT_{\text{estimé}} = \text{Moyenne observée} + f(\text{erreur})
+$$
+
+**Retransmission rapide de données.**
+
+<!-- TODO ![Chronogramme erreur](img/1_retransmission-rapide.jpg) -->
+
+**Limitation du trafic superflu.**
+
+*Exemple.* Les applications intéractives de type connexion à distance (connection non cryptée).
+
+<!-- TODO ![Chronogramme erreur](img/1_traitement-caractere-echo.jpg) -->
+
+En-tête TCP $$\simeq$$ 40 octets, donc rendement de l'échange (niveau TCP) :
+
+$$
+{D_{\text{utiles}} \over D_{\text{transmises}}} = {2 \over 2(\text{ACK}) + 2(\text{en-tête et 'a'})} = {2 \over 2 \times 40 + 2 \times (40 + 1)} \simeq 1\%
+$$
+
+**Retard d'acquittement.**
+
+On retarde l'envoi d'ACK pour favoriser le regroupement de messages. En pratique, le retard est en dizaines de millisecondes. On envoie toujours 3 messages pour 2 octets utiles.
+
+**Algorithe de Nayle.**
+
+> Importance de limiter le nombre de petits messages :
+>
+> augmente le nombre de messages dans le routeur $$\rightarrow$$ augmente le risque de perte de paquets $$\rightarrow$$ augmente le nombre de ré-émissions $$\rightarrow$$ augmente le nombre de messages dans le routeur (boucle)
+
+Principe : on ne peut émettre qu'un seul petit paquet non acquitté sur le réseau
+
+- LAN : émission fréquente (car acquittement rapide)
+- WAN : délai élevé $$\rightarrow$$ regroupement
+
+**Contrôle de flux.** Il permet d'adapter le rythme d'émission des données au rythme de consommation du récepteur.
+
+- Utilisation du champ `fenetre` de l'entête TCP indiquant la place restante de l'émetteur du message.
+
+**Mécanisme de fenêtre glissante.**
+
+<!-- TODO ![Chronogramme erreur](img/1_fenetre-glissante.jpg) -->
+
+> Le scénario de consommation des données est à priori arbitraire
+
+**Fenêtre vide.** Lorsque E (émetteur) reçoit ACK = N et WIN = 0, E stoppe l'émission et teste périodiquement la fenêtre de R (récepteur) : première tentative en 5 secondes avec 1 paquet de 1 octer, puis double le temps jusqu'à 1 minute. Tant que R ne peut recevoir (R $$\rightarrow$$ ACK=N et WIN=0)
+
+**Syndrome de la fenêtre stupide.** (*ou silly window*)
 
 .
