Cours/TD PS S40/S41

--- a/PS/CM/1.md
+++ b/PS/CM/1.md
@@ -1,4 +1,4 @@
-# Probabilités et Simulations
+# Probabilités et Simulations - 1
 
 Etherpad : <http://pads.univ-grenoble-alpes.fr/p/INFO4_PS_19>
 
@@ -157,11 +157,169 @@ $$X \sim E(\lambda)$$
     & = & 1\\
     \end{array}$$
 
-Pour la prochaine fois :
+Cauchy : $$f_X(x) = \alpha {1 \over 1 + x^2} \text{ si } x \geq 0, 0 \text{ sinon}$$, $$E(X) = \int_0^{\infty} {\alpha x \over 1 + x^2}$$ (on ne peut pas la calculer)
 
-- Calculer E(x)
-- Pareil pour Cauchy : $$f_X(x) = {1 \over 1 + x^2} si x \geq 0, 0 sinon$$
-- Tester avec R
+## Espérance
 
+### Formules
 
-.
+$$
+(\Omega, A, \mathbb{P})
+$$
+
+$$
+\begin{array}{lcl}
+X & : & \Omega \rightarrow \mathbb{R}\\
+f_X & : & \mathbb{R} \rightarrow \mathbb{R}^+\\
+F_X & : & \mathbb{R} \rightarrow [0, 1]\\
+\end{array}
+$$
+
+$$
+\begin{array}{lcl}
+\mathbb{E}(X) & = & \int_{-\infty}^{+\infty} xf_X(x) dx\\
+ & = & \int X(\omega) d \mathbb{P}(\omega)\\
+\mathbb{E}(aX) & = & a \mathbb{E}(X)\\
+\mathbb{E}(X + Y)& = & \mathbb{E}(X) + \mathbb{E}(Y)\\
+\mathbb{E}(X \times Y)& = & \text{cov}(XY) \text{ cov = covariance}\\
+\end{array}
+$$
+
+### Démonstrations
+
+$$
+aX : \left\{\begin{array}{rcl} \Omega & \rightarrow & \mathbb{R}\\\omega & \mapsto & aX(\omega)\end{array}\right.
+$$
+
+$$
+f_{aX}(x) = {1 \over a}f_X({x \over a})
+$$
+
+$$
+\begin{array}{lcl}
+\mathbb{E}(aX) & = & \int_{-\infty}^{+\infty} xf_{aX}(x) dx\\
+& = & \int_{-\infty}^{+\infty} {x \over a} f_{X}({x \over a}) dx\\
+& = & \int_{-\infty}^{+\infty} y f_{X}(y) dy \text{ avec } y = {x \over a}\\
+& = & a \mathbb{E}(X)\\
+\end{array}
+$$
+
+$$
+\begin{array}{lcl}
+\mathbb{E}(aX) & = & \int_{-\infty}^{+\infty} (aX)(\omega) d\mathbb{P}(\omega)\\
+& = & \int_{-\infty}^{+\infty} a \times X(\omega) d\mathbb{P}(\omega)\\
+& = & a \int_{-\infty}^{+\infty} \lambda (\omega) d\mathbb{P}(\omega)\\
+& = & a \mathbb{E}(X)\\
+\end{array}
+$$
+
+$$
+\begin{array}{lcl}
+\mathbb{E}(X + Y) & = & \int_{-\infty}^{+\infty} (X + Y)(\omega) d\mathbb{P}(\omega)\text{ avec } (X+Y)(\omega) = X(\omega) + Y(\omega)\\
+& = & \int_{-\infty}^{+\infty} X(\omega)d\mathbb{P}(\omega) + \int_{-\infty}^{+\infty} Y(\omega)d\mathbb{P}(\omega)\\
+& = & \mathbb{E}(X) + \mathbb{E}(Y)\\
+\end{array}
+$$
+
+## Variance
+
+### Formules
+
+Soit $$X$$ tel que $$\mathbb{E}(X) = \mu$$ :
+
+$$
+\begin{array}{lcl}
+\text{Var}(X) & = & \mathbb{E}((X - \mu)^2) \Big(\leadsto \sigma(X) = \sqrt{\text{Var}(x)}\Big)\\
+& = & \mathbb{E}(X^2 - 2 \mu X + \mu^2)\\
+& = & \mathbb{E}(X^2) - 2 \mu \mathbb{E}(X) + \mu^2\\
+& = & \mathbb{E}(X^2) - 2 \mu \times \mu + \mu^2\\
+& = & \mathbb{E}(X^2) - \mu^2\\
+\end{array}
+$$
+
+$$
+\begin{array}{lcl}
+\text{Var}(aX) & = & \mathbb{E}(X^2) - \mu^2\\
+\text{Var}(X - a) & = & \text{Var}(X) \\
+\text{Var}(X + Y) & = & \text{Var}(X) + \text{Var}(Y) + 2 \mathbb{E}(XY) \\
+\end{array}
+$$
+
+### Démonstrations
+
+$$
+\begin{array}{lcl}
+\text{Var}(aX) & = & \mathbb{E}(((aX)^2) - (\mathbb{E}(aX))^2\\
+& = & a^2 \mathbb{E}(X^2) - (a\mathbb{E}(X))^2\\
+& = & a^2 (\mathbb{E}(X^2) - \mathbb{E}(X))^2\\
+\end{array}
+$$
+
+$$
+\begin{array}{lcl}
+\text{Var}(X + Y) & = & \mathbb{E}((X + Y)^2)\\
+& = & \mathbb{E}(X^2 + Y^2 + 2XY)\\
+& = & \text{Var}(X) + \text{Var}(Y) + 2\mathbb{E}(XY) \\
+\end{array}
+$$
+
+## Indépendance et probabilité conditionnelle
+
+**Définition.** Deux évènements sont indépendants si $$P(A, B) = P(A) P(B)$$
+
+*Exemple.* Course avec 3 chevaux :
+
+- Ensemble des probabilités : $$\Omega = \{(1, 2, 3), (1, 3, 2), (2, 1, 3), (2, 3, 1), (3, 1, 2), (3, 2, 1)\}$$
+- Le cheval 1 gagne : $$A = \{(1, 2, 3), (1, 3, 2)\}$$
+- Le cheval 2 devant le cheval 3 : $$B = \{1, 2, 3\}, \{2, 1, 3\}, \{2, 3, 1\}$$
+- $$P(A) = {1 \over 3}$$, $$P(B) = {1 \over 2}$$
+- $$A$$ et $$B$$ sont indépendants : $$P(A, B) = P(A \cap B) = {1 \over 3} \times {1 \over 2} = {1 \over 6}$$
+- $$A_1 \dots A_n$$ mutuellement indépendants si pour tout sous-ensemble de $$A_1 \dots A_n$$, $$P(\cap) = \prod \text{Proba}$$
+
+*Exemple.* $$n = 3$$ : $$A_1, A_2, A_3$$
+
+Si $A_1, A_2, A_3$ indépendantes, alors
+
+- $$P(A_1 \cap A_2) = P(A_1) . P(A_2)$$
+- $$P(A_1 \cap A_3) = P(A_1) . P(A_3)$$
+- $$P(A_2 \cap A_3) = P(A_2) . P(A_3)$$
+- $$P(A_1 \cap A_2 \cap A_3) = P(A_1) . P(A_2) . P(A_3)$$
+
+> $$P(A_1 \cap A_2 \cap A_3 = P(A_1) . P(A_2) . P(A_3)$$ ne suffit pas.
+
+> Pas transitive. $A \text{ indep } B$ et $B \text{ indep } C !\Rightarrow A \text{ indep } C$
+
+> L'indépendance pair à pair ne suffit pas
+
+*Illustration.* Dé 6 lancé 2 fois.
+
+- $$A$$ : le lancer 1 est impair
+- $$B$$ : le lancer 2 est impair
+- $$C$$ : la somme des deux lancers est impaire
+
+**Définition.** Probabilité conditionnelle : $$P(A | B) = {P(A \cap B) \over P(B)}$$
+
+> $$A \text{ indep } B \Leftrightarrow P(A | B) = P(A)$$
+> Preuve :
+> $$
+> \begin{array}{lcl}
+> A \text{ indep } B & \Leftrightarrow & P(A \cap B) = P(A) . P(B) \\
+> & \Leftrightarrow & {P(A \cap B) \over P(B)} = P(A) \\
+> \end{array}
+> $$
+
+> Indépendants $$P(A \cap B) = P(A) P(B)$$ $$\neq$$ disjoints $$P(A \cap B) = 0$$.
+
+*Exemple.* Calculer la probabilité que 1 arrive premier sachant que A arrive avant 2.$$
+
+$$
+P(A | B) = {P(A \cap B) \over P(B)} = {P(A) \over P(B)} = {2 / 6 \over 3 / 6} = {2 \over 3}
+$$
+
+**Formule des probabilités totales.** Soit $$B_1, \dots, B_n$$ **partition** de $$\Omega$$ : $$B_i \cap B_j = \empty \forall i \neq j$$ et $$\bigcup\limits_{i=1}^{n} = \Omega$$)
+
+$$
+P(A) = \sum_{i = 1}^n P(A \cap B_i) = \sum_{i = 1}^n P(A | B_i)P(B_i)
+$$
+
+**Formules de Bayes.** $$P(A|B) = {P(B|A) P(A) \over P(B)}$$ (permet le passage de $$P(A|B)$$ vers $$P(B|A)$$ et inversement)
