--- a/TR/CM/1.md
+++ b/TR/CM/1.md
@@ -1,4 +1,4 @@
-# Technologie des Réseaux
+# Technologie des Réseaux - 1
 
 Responsable : Olivier.Richard@imag.fr
 
@@ -231,11 +231,11 @@ $$
 RTT_{\text{estimé}} = \text{Moyenne observée} + f(\text{erreur})
 $$
 
-**Retransmission rapide de données.**
+*Retransmission rapide de données.*
 
 <!-- TODO ![Chronogramme erreur](img/1_retransmission-rapide.jpg) -->
 
-**Limitation du trafic superflu.**
+*Limitation du trafic superflu.*
 
 *Exemple.* Les applications intéractives de type connexion à distance (connection non cryptée).
 
@@ -247,11 +247,9 @@ $$
 {D_{\text{utiles}} \over D_{\text{transmises}}} = {2 \over 2(\text{ACK}) + 2(\text{en-tête et 'a'})} = {2 \over 2 \times 40 + 2 \times (40 + 1)} \simeq 1\%
 $$
 
-**Retard d'acquittement.**
+**Retard d'acquittement.** On retarde l'envoi d'ACK pour favoriser le regroupement de messages. En pratique, le retard est en dizaines de millisecondes. On envoie toujours 3 messages pour 2 octets utiles.
 
-On retarde l'envoi d'ACK pour favoriser le regroupement de messages. En pratique, le retard est en dizaines de millisecondes. On envoie toujours 3 messages pour 2 octets utiles.
-
-**Algorithe de Nayle.**
+#### Algorithe de Nayle
 
 > Importance de limiter le nombre de petits messages :
 >
@@ -266,7 +264,7 @@ Principe : on ne peut émettre qu'un seul petit paquet non acquitté sur le rés
 
 - Utilisation du champ `fenetre` de l'entête TCP indiquant la place restante de l'émetteur du message.
 
-**Mécanisme de fenêtre glissante.**
+#### Mécanisme de fenêtre glissante
 
 <!-- TODO ![Chronogramme erreur](img/1_fenetre-glissante.jpg) -->
 
@@ -274,6 +272,34 @@ Principe : on ne peut émettre qu'un seul petit paquet non acquitté sur le rés
 
 **Fenêtre vide.** Lorsque E (émetteur) reçoit ACK = N et WIN = 0, E stoppe l'émission et teste périodiquement la fenêtre de R (récepteur) : première tentative en 5 secondes avec 1 paquet de 1 octer, puis double le temps jusqu'à 1 minute. Tant que R ne peut recevoir (R $$\rightarrow$$ ACK=N et WIN=0)
 
-**Syndrome de la fenêtre stupide.** (*ou silly window*)
+#### Syndrome de la fenêtre stupide (*ou silly window*)
+
+Si B annonce une petite fenêtre (suite à une faible consommation de données des couches supérieures) l'émette émét (avec une forte probabilité) un nouveau petit message qui fait redescendre WIN = 0. Cela implique une sous-utilisation du réseau et la multiplication des petits messages, **à éviter**.
+
+**Solution.** Après l'émission de WIN = 0, l'emetteur doit attendre d'avoir assez de place pour envoyer un acquittement pour envoyer un ACK avec WIN=seuil (seuil fonction de MSS et de la mémoire allouée par connection)
+
+#### Maîtrise de congestion réseau
+
+- **Problème.** Une machine peut annoncer une grande fenêtre qui dépasse les capacités du réseau traversé. Peut provoquer des pertes de paquets au niveau des routeurs.
+- **Proposition.** Chaque machine maintient une **fenêtre de congestion** (FC) pour estimer la capacité du réseau.
+  - ***Principe d'utilisation de la FC.*** Quantité maximale de données non acquittées émises = MIN (champ WIN reçu, FC).
+  - ***Évolution de FC*** (hypothèse pour la suite WIN reçu >> FC)
+  - ***Technique du Slow-Start*** FC0 = 1 MSS (à chaque ACK reçu FC = FC + 1 MSS)
+
+- Problème de sous-utilisation du réseau
+- Amélioration :
+  - Début slow-start puis évolution linéaire à partir d'un seuil. Croissance exponentielle de FC du début d'émission.
+  - Perte de messages : FC = FC/2. Plusieurs versions existent : Tahoe, Réno, Vega.
+
+#### Adaptation par le réseau
+
+**Observation.** Oscillation lors de la détection de congestion car tout les équipements terminaux détectent en même temps : baisse forte puis remontée de charge.
+
+**Proposition.** Introduire la notion de routeur actif. RED = *Random Early Detection*. Le routeur surveille le taux d'occupation de ses files d'attentes. Si $$\text{charge} > \text{seuil}_\text{fixé}$$ alors destruction aléatoire de paquets $$\rightarrow$$ détection de congestion anticipée pour certaines connections.
+
+
+
+
+
 
 .
