--- a/RO/CM/1.md
+++ b/RO/CM/1.md
@@ -1,4 +1,4 @@
-# Cours de recherche opérationelle I
+# Cours de recherche opérationelle - I
 
 Responsable cours : Nadia Brauner (<nadia.brauner@imag.fr>)
 
