--- a/II/CM/1.md
+++ b/II/CM/1.md
@@ -6,6 +6,8 @@ Responsable : Renaud BLANCH (<blanch@imag.fr>)
 
 Site : <http://iihm.imag.fr/blanch/INFO4/IHM/>
 
+Slide : <http://iihm.imag.fr/blanch/INFO4/IHM/cours/0-introduction.pdf>
+
 Langage : Java FX
 
 **Théorie** (ou modèle) **de l'action** (voir *The Design of Everyday Things* de Don NORMAN)
