--- a/II/CM/2.md
+++ b/II/CM/2.md
@@ -1,5 +1,7 @@
 # Ingénierie Intéraction Homme Machine (IHM) - 2
 
+Slide : <http://iihm.imag.fr/blanch/INFO4/IHM/cours/1-evenements.pdf>
+
 ## 0. Principes pour le développement de logiciels intéractifs
 
 ### Évènements
@@ -77,5 +79,38 @@ class Interaction implements EventHandler<MouseEvent> {
   }
 }
 ```
+
+## 1. Elements d'architecures
+
+**Architecture.** Séparer l'interface utilisateur
+
+### Principe 1
+
+Séparer le code du Noyau Fonctionnel (ou **NF**) du code de l'Interface Utilisateur (ou **IU**). Typiquement si on adapte une application pour qu'elle puisse être utilisée avec des commandes vocales, le NF ne devrait pas être modifié.
+
+- **NF.**
+  - Le "quoi"
+  - Développement non incrémental
+- **IU.**
+  - Le "comment", dépend des périphériques
+  - Développement incrémental
+
+### Principe 2
+
+Le **NF** est **indépendant** de l'**IU**. Concrètement, le NF ne doit appeler aucune fonction de l'IU (se traduit par des `import` par exemple). Mais l'IU est dépendante du NF.
+
+Permet de minimiser les dépendances
+
+### Principe 3
+
+Le NF doit offrir des **services nécessaires** à l’interaction :
+
+- la notification *(dépendance du NF à l'IU ?)* ;
+- la prévention des erreurs ; et
+- l’annulation
+
+> *Polling* l'IU "tire" l'information du NF à intervalles réguliers à l'aide d'une boucle et d'un délai pour les notifications.
+
+
 
 .
