--- a/PS/CM/2.md
+++ b/PS/CM/2.md
@@ -30,6 +30,62 @@ P(V=k) & = & P(\lfloor U \times N + 1\rfloor = k)\\
 \end{array}
 $$
 
+### Première approche du rejet
+
+On a un dé à 8 faces (uniforme) $$\{1, \dots, 8\}$$
+On a besoin d'un dé à 6 faces (uniforme) $$\{1, \dots, 6\}$$
+
+```
+while X > 6
+  X = De_8
+return X
+```
+
+> $$\sum\limits_{k=1}^{\infty} r^{k-1} = {1 \over 1-r} (|r| < 1)$$
+
+J'ai un générateur uniforme sur A. Je veux un générateur uniforme sur B.
+
+```
+Géné_unif_B :
+repeat until X in B
+  X = Géné_unif_A
+return X
+```
+
+Montrer que `Géné_unif_B` est valide :
+
+Soit $$C \subseteq B$$, montrons que $$P(X_in C) = {|C| \over |B|}$$
+
+Soit $$k \in \mathbb{N}$$,
+
+$$
+\begin{array}{lcl}
+P(X \in C, N = k) & = & P(X_1 \not \in B_1, \dots, X_{k-1} \not \in B, X_k \in C) \\
+& = & P(X_1 \not \in B) P(X_2 \not \in B) \dots P(X_{k-1} \not \in B) P(X_k \in C) \\
+& = & (1 - {|B| \over |A|})^{k - 1} \times {|C| \over |A|}
+\end{array}
+$$
+
+$$
+\begin{array}{lcl}
+P(X \in C) & = & \sum_{k = 1}^{\infty} P(X \in C, N = k)\\
+& = & [\sum_{k = 1}^{\infty} (1 - {|B| \over |A|})^{k - 1}] \times {|C| \over |A|}\\
+& = & {1 \over {|B| \over |A|}} \times {|C| \over |A|} \\
+& = & {|C| \over |B|}
+\end{array}
+$$
+
+## Méthodes génériques
+
+*Comment avoir un générateur avec une répartition définie à partir d'un générateur uniforme entre 0 et 1 ?*
+
+On peut par exemple faire des "paliers" de "taille" proportionnelle à la probabilité d'obtenir cette valeur et tester l'appartenance à un palier avec des if/else.
+
+*Exemple.* $$0 \leq k_1 \leq 0.2 \leq k_2 \leq 1$$ pour une probabilité de 0,2 d'avoir 1 et de 0,8 d'avoir 2.
+
+**Optimisation.** Mettre les paliers les plus larges en premier.
+
+
 
 
 
